--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a class="nav-link scrollto" href="#features">App Features</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li>
+          <li><a class="nav-link scrollto" href="#disclaimer">Disclaimer</a></li>
           <li><a class="getstarted scrollto" href="#features">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -100,7 +101,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt"></i>
                   <h4>Automatic claims</h4>
-                  <p>When you sleep this app can generate bitcoins without having to do anything. just do the settings at the beginning</p>
+                  <p>When you sleep this app can generate bitcoins without having to do anything. just do the settings at the beginning and hold bitcoin</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
@@ -120,7 +121,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-atom"></i>
                   <h4>Deposit</h4>
-                  <p>You can send bitcoins to your personal deposit address and they will be credited to your FreeBitco.in account after 1 network confirmation. We have no minimum deposit amount, we accept and credit all deposits to your account.</p>
+                  <p>You can send bitcoins to your personal deposit address and they will be credited to your account after 1 network confirmation. We have no minimum deposit amount, we accept and credit all deposits to your account.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
                   <i class="bx bx-id-card"></i>
@@ -403,7 +404,7 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-title">
 
@@ -413,7 +414,7 @@
 
         <div class="accordion-list">
           <ul>
-            <li data-aos="fade-up">
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">What is Bitcoin? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                 <p>
@@ -422,7 +423,7 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="100">
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">How does Bitcoin work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                 <p>
@@ -431,7 +432,7 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="200">
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Is Bitcoin really used by people? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                 <p>
@@ -440,7 +441,7 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="300">
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">How does Robocoinx work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                 <p>
@@ -451,7 +452,7 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="400">
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">How does automatic claim work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
                 <p>
@@ -466,6 +467,25 @@
       </div>
     </section><!-- End Frequently Asked Questions Section -->
 
+    <section id="disclaimer" class="disclaimer">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Disclaimer</h2>
+        </div>
+        <div class="container">
+          <h4>No Investment Advice</h4>
+          <p>The information provided on this website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website's content as such. Robocoinx does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions.</p>
+          <hr>
+          <h4>Accuracy of Information</h4>
+          <p>Robocoinx will strive to ensure accuracy of information listed on this website although it will not hold any responsibility for any missing or wrong information. Robocoinx provides all information as is. You understand that you are using any and all information available here at your own risk.</p>
+          <hr>
+          <h4>Non Endorsement</h4>
+          <p>The appearance of third party advertisements and hyperlinks on Robocoinx does not constitute an endorsement, guarantee, warranty, or recommendation by Robocoinx. Do conduct your own due diligence before deciding to use any third party services.</p>
+          <hr>
+        </div>
+      </div>
+    </section>
     <!-- ======= Contact Section ======= -->
     <!-- <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
