--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <h1><a href="index.html" class="logo d-flex align-items-center">ROBOCOINX</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <!-- <a href="index.html"><img src="assets/img/logo-header.png" alt="" class="img-fluid"></a> -->
       </div>
 
       <nav id="navbar" class="navbar">
