--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div>
             <h1>Free Bitcoin Every Hour</h1>
             <h2>The new and best way to claim your free Bitcoin. Get bitcoin for free and automatically every hour. #freebitcoin #investinbitcoin</h2>
-            <a href="/assets/app/app-release.apk" download class="download-btn"><i class="bx bxl-android"></i> Download app</a>
+            <a href="/assets/app/robocoinx.apk" download class="download-btn"><i class="bx bxl-android"></i> Download app</a>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>
             <a href="#" class="download-btn"><i class="bx bxl-apple"></i> App Store <span style="font-size: 12px;color: beige;">(Coming soon)</span></a> -->
           </div>
