--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Free Bitcoin - Every Hour</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="The new and best way to claim your free Bitcoin. Get bitcoin for free and automatically every hour. #freebitcoin #investinbitcoin" name="description">
+  <meta content="Free bitcoin invest bitcoin cryptocurrency" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
