add robots and analytic

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Appland - v4.0.1
-  * Template URL: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JW06CDQ0DQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-JW06CDQ0DQ');
+  </script>
 </head>
 
 <body>
@@ -70,14 +73,14 @@
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
             <h1>Free Bitcoin Every Hour</h1>
-            <h2>The new and best way to claim your free Bitcoin. Get bitcoin for free and automatically every hour. #freebitcoin #investinbitcoin</h2>
+            <h2>The new and best way to claim your free Bitcoin. Get bitcoin for free and automatically every hour. #freebitcoin #investinbitcoin #cryptocurrency</h2>
             <a href="/assets/app/robocoinx.apk" download class="download-btn"><i class="bx bxl-android"></i> Download app</a>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>
             <a href="#" class="download-btn"><i class="bx bxl-apple"></i> App Store <span style="font-size: 12px;color: beige;">(Coming soon)</span></a> -->
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="assets/img/hero-img.png" class="img-fluid" alt="robocoinx">
         </div>
       </div>
     </div>
@@ -133,7 +136,7 @@
             </div>
           </div>
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/features.svg" class="img-fluid" alt="">
+            <img src="assets/img/features.svg" class="img-fluid" alt="robocoinx">
           </div>
         </div>
 
@@ -249,12 +252,12 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="gallery-slider swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="assets/img/gallery/G1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G1.png" class="img-fluid" alt="" style="border-radius: 16px;"></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/G2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G2.png" class="img-fluid" alt="" style="border-radius: 16px;"></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/G3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G3.png" class="img-fluid" alt="" style="border-radius: 16px;"></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/G4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G4.png" class="img-fluid" alt="" style="border-radius: 16px;"></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/G5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G5.png" class="img-fluid" alt="" style="border-radius: 16px;"></a></div>
-            <div class="swiper-slide"><a href="assets/img/gallery/G6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G6.png" class="img-fluid" alt="" style="border-radius: 16px;"></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/G1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G1.png" class="img-fluid" alt="robocoinx" style="border-radius: 16px;"></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/G2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G2.png" class="img-fluid" alt="robocoinx" style="border-radius: 16px;"></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/G3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G3.png" class="img-fluid" alt="robocoinx" style="border-radius: 16px;"></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/G4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G4.png" class="img-fluid" alt="robocoinx" style="border-radius: 16px;"></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/G5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G5.png" class="img-fluid" alt="robocoinx" style="border-radius: 16px;"></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/G6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/G6.png" class="img-fluid" alt="robocoinx" style="border-radius: 16px;"></a></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
