--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Free Bitcoin - Every Hour</title>
-  <meta content="The new and best way to claim your free Bitcoin. Get bitcoin for free and automatically every hour. #freebitcoin #investinbitcoin #cryptocurrency" name="description">
-  <meta content="Free bitcoin invest bitcoin cryptocurrency" name="keywords">
+  <title>Free Bitcoin - Every Hour - Robocoinx</title>
+  <meta content="Robocoinx. The new and best way to claim your free Bitcoin. Get bitcoin for free and automatically every hour. #freebitcoin #investinbitcoin #cryptocurrency" name="description">
+  <meta content="Robocoinx Free bitcoin invest bitcoin cryptocurrency" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -103,12 +103,12 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt"></i>
                   <h4>Automatic claims</h4>
-                  <p>When you sleep this app can generate bitcoins without having to do anything. just do the settings at the beginning and hold bitcoin</p>
+                  <p>When you sleep this app can generate bitcoin without having to do anything. just do the settings at the beginning and hold bitcoin</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
                   <h4>Free bitcoin bonus</h4>
-                  <p>There is an additional bitcoin bonus if you do it automatically. The bitcoins you get will continue to increase</p>
+                  <p>There is an additional bitcoin bonus if you do it automatically. The bitcoin you get will continue to increase</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
@@ -123,7 +123,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-atom"></i>
                   <h4>Deposit</h4>
-                  <p>You can send bitcoins to your personal deposit address and they will be credited to your account after 1 network confirmation. We have no minimum deposit amount, we accept and credit all deposits to your account.</p>
+                  <p>You can send bitcoin to your personal deposit address and they will be credited to your account after 1 network confirmation. We have no minimum deposit amount, we accept and credit all deposits to your account.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
                   <i class="bx bx-id-card"></i>
@@ -182,7 +182,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1">What is Bitcoin? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                 <p>
-                  Bitcoin is an innovative payment network and a new kind of money. Bitcoin uses peer-to-peer technology to operate with no central authority or banks; managing transactions and the issuing of bitcoins is carried out collectively by the network. Bitcoin is open-source; its design is public, nobody owns or controls Bitcoin and everyone can take part. Through many of its unique properties, Bitcoin allows exciting uses that could not be covered by any previous payment system.
+                  Bitcoin is an innovative payment network and a new kind of money. Bitcoin uses peer-to-peer technology to operate with no central authority or banks; managing transactions and the issuing of bitcoin is carried out collectively by the network. Bitcoin is open-source; its design is public, nobody owns or controls Bitcoin and everyone can take part. Through many of its unique properties, Bitcoin allows exciting uses that could not be covered by any previous payment system.
                 </p>
               </div>
             </li>
@@ -191,7 +191,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed">How does Bitcoin work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                 <p>
-                  From a user perspective, Bitcoin is nothing more than a mobile app or computer program that provides a personal Bitcoin wallet and allows a user to send and receive bitcoins with them. This is how Bitcoin works for most users. Behind the scenes, the Bitcoin network is sharing a public ledger called the "block chain". This ledger contains every transaction ever processed, allowing a user’s computer to verify the validity of each transaction. The authenticity of each transaction is protected by digital signatures corresponding to the sending addresses, allowing all users to have full control over sending bitcoins from their own Bitcoin addresses. In addition, anyone can process transactions using the computing power of specialized hardware and earn a reward in bitcoins for this service. This is often called "mining". To learn more about Bitcoin, you can consult the dedicated page and the original paper.
+                  From a user perspective, Bitcoin is nothing more than a mobile app or computer program that provides a personal Bitcoin wallet and allows a user to send and receive bitcoin with them. This is how Bitcoin works for most users. Behind the scenes, the Bitcoin network is sharing a public ledger called the "block chain". This ledger contains every transaction ever processed, allowing a user’s computer to verify the validity of each transaction. The authenticity of each transaction is protected by digital signatures corresponding to the sending addresses, allowing all users to have full control over sending bitcoin from their own Bitcoin addresses. In addition, anyone can process transactions using the computing power of specialized hardware and earn a reward in bitcoin for this service. This is often called "mining". To learn more about Bitcoin, you can consult the dedicated page and the original paper.
                 </p>
               </div>
             </li>
@@ -200,7 +200,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed">Is Bitcoin really used by people? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                 <p>
-                  Yes. There is a growing number of businesses and individuals using Bitcoin. This includes brick and mortar businesses like restaurants, apartments, law firms, and popular online services such as Namecheap, WordPress, and Reddit. While Bitcoin remains a relatively new phenomenon, it is growing fast. At the end of August 2013, the value of all bitcoins in circulation exceeded US$ 1.5 billion with millions of dollars worth of bitcoins exchanged daily.
+                  Yes. There is a growing number of businesses and individuals using Bitcoin. This includes brick and mortar businesses like restaurants, apartments, law firms, and popular online services such as Namecheap, WordPress, and Reddit. While Bitcoin remains a relatively new phenomenon, it is growing fast. At the end of August 2013, the value of all bitcoin in circulation exceeded US$ 1.5 billion with millions of dollars worth of bitcoin exchanged daily.
                 </p>
               </div>
             </li>
@@ -220,7 +220,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed">How does automatic claim work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
                 <p>
-                  Automatic claim occurs if the user holds a certain amount of bitcoins. See claim type in the <b>Profile</b> menu, if it is filled with Automatic, the user only needs to run the service in the home menu and click <b>START</b>. then a notification will appear indicating the service has been running. for each type of mobile android has limitations in running this service. You need to check in the settings menu, select battery, adjust the Robocoinx app settings so that it runs in the background
+                  Automatic claim occurs if the user holds a certain amount of bitcoin. See claim type in the <b>Profile</b> menu, if it is filled with Automatic, the user only needs to run the service in the home menu and click <b>START</b>. then a notification will appear indicating the service has been running. for each type of mobile android has limitations in running this service. You need to check in the settings menu, select battery, adjust the Robocoinx app settings so that it runs in the background
                 </p>
               </div>
             </li>
