--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> - <a href="https://traffic-creator.com/?ref=126381">Free Traffic</a>
       </div>
     </div>
   </footer><!-- End Footer -->
