--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play <span style="font-size: 12px;color: beige;">(in progress)</span></a>
             <a href="#" class="download-btn"><i class="bx bxl-apple"></i> App Store <span style="font-size: 12px;color: beige;">(Coming soon)</span></a>
             <div style="margin-top: 20px;">
-              <a href="/assets/app/robocoinx.apk" download class="download-btn"><i class="bx bxl-android"></i> Download app</a>
+              <a href="/assets/app/robocoinx.apk" download class="download-btn"><i class="bx bxl-android"></i> Download Apk</a>
+              <a href="https://drive.google.com/file/d/1Sh-yLQbT0C3IkLyV3DGPs9EzFbWk5-ie/view?usp=sharing"download class="download-btn"><i class="bx bxl-google-cloud"></i> Google Drive</a>
             </div>
           </div>
         </div>
